--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Ensure body takes up full viewport height */
 }
 
-.startSection {
+.startSection,
+.questionsSection {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -24,6 +24,12 @@ body {
   background-color: rgba(255, 255, 255, 0.75);
   padding: 10rem;
   border-radius: 5px;
+}
+
+.questionsSection {
+  padding: 1rem;
+  text-align: left;
+  align-items: flex-start;
 }
 
 .startBtn {
@@ -35,9 +41,30 @@ body {
 }
 
 .radio-button {
-  border: 1px red solid;
+  border: 2px #4d5b9e solid;
+  color: #293264;
+  font-weight: 600;
+  border-radius: 5px;
+  margin-right: 0.5rem;
+  padding: 0.5rem 1rem;
+  display: block;
+}
+
+.radio-button:hover {
+  background-color: white;
 }
 
 .radio-button input {
   display: none;
+}
+
+.singleQuestion {
+  border-bottom: 1px solid rgb(134, 134, 132);
+  padding-bottom: 1rem;
+}
+
+.choices {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 }
