--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body {
   padding: 1rem;
   text-align: left;
   align-items: flex-start;
+  display: flex;
 }
 
 .startBtn {
@@ -73,4 +74,10 @@ body {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+}
+
+.finishQuiz,
+.submitMsg {
+  align-self: center;
+  margin-top: 1rem;
 }
