--- a/src/index.css
+++ b/src/index.css
@@ -25,13 +25,14 @@ body {
   background-color: rgba(255, 255, 255, 0.9);
   padding: 10rem;
   border-radius: 5px;
+  width: 100%;
 }
 
 .questionsSection,
 .resultSection {
   padding: 1rem;
   text-align: left;
-  align-items: flex-start;
+  align-items: stretch;
   display: flex;
 }
 
